remove rotues api, add printing actual distance

--- a/static/index.html
+++ b/static/index.html
@@ -6,14 +6,16 @@
 
     <script
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeCRjWtqsHZGds5QmZzxuro7oVbXRlMTQ&v=weekly&libraries=places,geometry&callback=initialize"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs4_z0wkLAmxEveyj9pE-cBY6UpFcs680&v=weekly&libraries=places,geometry&callback=initialize"
     ></script>
   </head>
 
   <body>
     <div id="ui"><input type="number" id="distance" placeholder="Distance (km)"/><button id="generatePath"> Generate! </div>
+      <div id="outputBox" hidden></div>
 
     <div id="map"></div>
+    
     <!-- Autocomplete div goes here -->
   </body>
 </html>
